--- a/src/app/dashboard/tabel/tabel.component.html
+++ b/src/app/dashboard/tabel/tabel.component.html
@@ -1,3 +1,8 @@
+<!-- Meniul care apare cand apas click-dreapta -->
+<mat-menu #contextMenu="matMenu">
+    <button mat-menu-item (click)="editRow()">Edit</button>
+</mat-menu>
+
 <mat-form-field>
     <mat-label>Filter by Position</mat-label>
     <input matInput [(ngModel)]="filters.position" (keyup)="applyFilter()">
@@ -26,6 +31,24 @@
   
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
 
+    <!-- Checkbox Column -->
+    <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+        <mat-checkbox (change)="$event ? toggleAllRows() : null"
+                        [checked]="selection.hasValue() && isAllSelected()"
+                        [indeterminate]="selection.hasValue() && !isAllSelected()"
+                        [aria-label]="checkboxLabel()">
+        </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+        <mat-checkbox (click)="$event.stopPropagation()"
+                        (change)="$event ? selection.toggle(row) : null"
+                        [checked]="selection.isSelected(row)"
+                        [aria-label]="checkboxLabel(row)">
+        </mat-checkbox>
+        </td>
+    </ng-container>
+
     <!-- Position Column -->
     <ng-container matColumnDef="position">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
@@ -51,7 +74,19 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+    @if(currentMenu === 'edit-menu'){
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" 
+            [class.selected]="selection.isSelected(row)"
+            (contextmenu)="onRowRightClick($event, row)"
+            [class.right-clicked]="isRowRightClicked(row)"
+            [matMenuTriggerFor]="contextMenu">
+        </tr>
+    }
+    @else
+    {
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>    
+    }
 
     <!-- Row shown when there is no matching data. -->
     <tr class="mat-row" *matNoDataRow>
