--- a/src/app/dashboard/tabel/tabel.component.html
+++ b/src/app/dashboard/tabel/tabel.component.html
@@ -1,6 +1,6 @@
 <!-- Meniul care apare cand apas click-dreapta -->
 <mat-menu #contextMenu="matMenu">
-    <button mat-menu-item (click)="editRow()">Edit</button>
+    <button mat-menu-item (click)="openEditDialog()">Edit</button>
 </mat-menu>
 
 <mat-form-field>
@@ -71,20 +71,22 @@
         <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <!-- Edit Button -->
+    <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <td mat-cell *matCellDef="let row">
+            <!-- You can customize the content of the actions cell as needed -->
+            <button mat-icon-button [matMenuTriggerFor]="contextMenu" (click)="actionOnSpecRow(row)">
+                <mat-icon>more_vert</mat-icon>
+            </button>
+        </td>
+    </ng-container>
 
-    @if(currentMenu === 'edit-menu'){
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;" 
-            [class.selected]="selection.isSelected(row)"
-            (contextmenu)="onRowRightClick($event, row)"
-            [class.right-clicked]="isRowRightClicked(row)"
-            [matMenuTriggerFor]="contextMenu">
-        </tr>
-    }
-    @else
-    {
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>    
-    }
+    <!-- Delete Button -->
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>    
+    
 
     <!-- Row shown when there is no matching data. -->
     <tr class="mat-row" *matNoDataRow>
