Completion of the edit feature and implementation of the delete and delete selected feature

--- a/src/app/dashboard/edit-data-dialog/edit-data-dialog.component.html
+++ b/src/app/dashboard/edit-data-dialog/edit-data-dialog.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Hi</h1>
+<h1 mat-dialog-title>Edit Data</h1>
 <form #form="ngForm" (ngSubmit)="onSubmit()">
     <mat-dialog-content>
       <mat-form-field>
