--- a/src/app/dashboard/tabel/tabel.component.html
+++ b/src/app/dashboard/tabel/tabel.component.html
@@ -1,6 +1,7 @@
-<!-- Meniul care apare cand apas click-dreapta -->
-<mat-menu #contextMenu="matMenu">
+<!-- Meniul care apare dupa apasarea butonului actions -->
+<mat-menu #actionsMenu="matMenu">
     <button mat-menu-item (click)="openEditDialog()">Edit</button>
+    <button mat-menu-item (click)="openDeleteDialog()">Delete</button>
 </mat-menu>
 
 <mat-form-field>
@@ -24,8 +25,12 @@
 </mat-form-field>
 
 <!-- Butoanele care vor aparea cand intram pe meniul de edit -->
-<button *ngIf="currentMenu === 'edit-menu'" mat-raised-button (click)="openDialog()" matTooltip="Primary" color="primary">
+<button *ngIf="currentMenu === 'edit-menu'" mat-raised-button (click)="openAddDialog()" matTooltip="Primary" color="primary">
     <mat-icon>plus_one</mat-icon>
+</button>
+
+<button *ngIf="currentMenu === 'edit-menu'" mat-raised-button (click)="openDelSelDialog()" matTooltip="Primary" color="primary">
+    <mat-icon>delete</mat-icon>
 </button>
 <!-- Butoanele care vor aparea cand intram pe meniul de edit -->
   
@@ -71,18 +76,16 @@
         <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
     </ng-container>
 
-    <!-- Edit Button -->
+    <!-- Actions Button -->
     <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Actions </th>
         <td mat-cell *matCellDef="let row">
             <!-- You can customize the content of the actions cell as needed -->
-            <button mat-icon-button [matMenuTriggerFor]="contextMenu" (click)="actionOnSpecRow(row)">
+            <button mat-icon-button [matMenuTriggerFor]="actionsMenu" (click)="actionOnSpecRow(row)">
                 <mat-icon>more_vert</mat-icon>
             </button>
         </td>
     </ng-container>
-
-    <!-- Delete Button -->
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>    
