--- a/src/app/dashboard/tabel/tabel.component.html
+++ b/src/app/dashboard/tabel/tabel.component.html
@@ -24,6 +24,19 @@
     <input matInput [(ngModel)]="filters.symbol" (keyup)="applyFilter()">
 </mat-form-field>
 
+<mat-form-field class="example-form-field">
+    <mat-label>Choose a date</mat-label>
+    <input matInput [matDatepicker]="datepicker" [(ngModel)]="filters.date">
+    <mat-hint>MM/DD/YYYY</mat-hint>
+    <mat-datepicker-toggle matIconSuffix [for]="datepicker"></mat-datepicker-toggle>
+    <mat-datepicker #datepicker>
+      <mat-datepicker-actions>
+        <button mat-button matDatepickerCancel>Cancel</button>
+        <button mat-raised-button color="primary" (click)="applyFilter()" matDatepickerApply>Apply</button>
+      </mat-datepicker-actions>
+    </mat-datepicker>
+</mat-form-field>
+
 <!-- Butoanele care vor aparea cand intram pe meniul de edit -->
 <button *ngIf="currentMenu === 'edit-menu'" mat-raised-button (click)="openAddDialog()" matTooltip="Primary" color="primary">
     <mat-icon>plus_one</mat-icon>
