--- a/src/app/dashboard/tabel/tabel.component.html
+++ b/src/app/dashboard/tabel/tabel.component.html
@@ -2,6 +2,7 @@
 <mat-menu #actionsMenu="matMenu">
     <button mat-menu-item (click)="openEditDialog()">Edit</button>
     <button mat-menu-item (click)="openDeleteDialog()">Delete</button>
+    <button mat-menu-item (click)="openMoreInfoDialog()">More Info</button>
 </mat-menu>
 
 <mat-form-field>
