--- a/src/app/dashboard/tabel/tabel.component.html
+++ b/src/app/dashboard/tabel/tabel.component.html
@@ -6,28 +6,28 @@
 </mat-menu>
 
 <mat-form-field>
-    <mat-label>Filter by Position</mat-label>
-    <input matInput [(ngModel)]="filters.position" (keyup)="applyFilter()">
+    <mat-label>Filter by Examen</mat-label>
+    <input matInput [(ngModel)]="filters.Examen" (keyup)="applyFilter()">
 </mat-form-field>
 
 <mat-form-field>
-    <mat-label>Filter by Name</mat-label>
-    <input matInput [(ngModel)]="filters.name" (keyup)="applyFilter()">
+    <mat-label>Filter by Sala</mat-label>
+    <input matInput [(ngModel)]="filters.Sala" (keyup)="applyFilter()">
 </mat-form-field>
 
 <mat-form-field>
-    <mat-label>Filter by Weight</mat-label>
-    <input matInput [(ngModel)]="filters.weight" (keyup)="applyFilter()">
+    <mat-label>Filter by Data</mat-label>
+    <input matInput [(ngModel)]="filters.Data" (keyup)="applyFilter()">
 </mat-form-field>
 
 <mat-form-field>
-    <mat-label>Filter by Symbol</mat-label>
-    <input matInput [(ngModel)]="filters.symbol" (keyup)="applyFilter()">
+    <mat-label>Filter by Ora</mat-label>
+    <input matInput [(ngModel)]="filters.Ora" (keyup)="applyFilter()">
 </mat-form-field>
 
 <mat-form-field class="example-form-field">
-    <mat-label>Choose a date</mat-label>
-    <input matInput [matDatepicker]="datepicker" [(ngModel)]="filters.date">
+    <mat-label>Choose a Date</mat-label>
+    <input matInput [matDatepicker]="datepicker" [(ngModel)]="filters.Data">
     <mat-hint>MM/DD/YYYY</mat-hint>
     <mat-datepicker-toggle matIconSuffix [for]="datepicker"></mat-datepicker-toggle>
     <mat-datepicker #datepicker>
@@ -51,7 +51,7 @@
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
 
     <!-- Checkbox Column -->
-    <ng-container matColumnDef="select">
+    <ng-container matColumnDef="Select">
         <th mat-header-cell *matHeaderCellDef>
         <mat-checkbox (change)="$event ? toggleAllRows() : null"
                         [checked]="selection.hasValue() && isAllSelected()"
@@ -67,31 +67,31 @@
     </ng-container>
 
     <!-- Position Column -->
-    <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
-        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+    <ng-container matColumnDef="Examen">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Examen </th>
+        <td mat-cell *matCellDef="let element"> {{element.Examen}} </td>
     </ng-container>
 
     <!-- Name Column -->
-    <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    <ng-container matColumnDef="Sala">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Sala </th>
+        <td mat-cell *matCellDef="let element"> {{element.Sala}} </td>
     </ng-container>
 
     <!-- Weight Column -->
-    <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Weight </th>
-        <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+    <ng-container matColumnDef="Data">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Data </th>
+        <td mat-cell *matCellDef="let element"> {{element.Data}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
-    <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Symbol </th>
-        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+    <ng-container matColumnDef="Ora">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Ora </th>
+        <td mat-cell *matCellDef="let element"> {{element.Ora}} </td>
     </ng-container>
 
     <!-- Actions Button -->
-    <ng-container matColumnDef="actions">
+    <ng-container matColumnDef="Actions">
         <th mat-header-cell *matHeaderCellDef> Actions </th>
         <td mat-cell *matCellDef="let row">
             <!-- You can customize the content of the actions cell as needed -->
