--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,8 +7,8 @@
       Sidenav
       <mat-toolbar color="primary">Menu</mat-toolbar>
       <mat-nav-list>
-        <a mat-list-item routerLink="/view-menu" routerLinkActive="active">Menu 1</a>
-        <a mat-list-item routerLink="/edit-menu" routerLinkActive="active">Menu 2</a>
+        <a mat-list-item routerLink="/view-menu" routerLinkActive="active">View Menu</a>
+        <a mat-list-item routerLink="/edit-menu" routerLinkActive="active">Edit Menu</a>
       </mat-nav-list>
     </mat-sidenav>
 
