--- a/src/app/dashboard/tabel/tabel.component.html
+++ b/src/app/dashboard/tabel/tabel.component.html
@@ -15,10 +15,10 @@
     <input matInput [(ngModel)]="filters.Sala" (keyup)="applyFilter()">
 </mat-form-field>
 
-<mat-form-field>
+<!-- <mat-form-field>
     <mat-label>Filter by Data</mat-label>
     <input matInput [(ngModel)]="filters.Data" (keyup)="applyFilter()">
-</mat-form-field>
+</mat-form-field> -->
 
 <mat-form-field>
     <mat-label>Filter by Ora</mat-label>
