--- a/src/app/dashboard/tabel/tabel.component.html
+++ b/src/app/dashboard/tabel/tabel.component.html
@@ -27,7 +27,7 @@
 
 <mat-form-field class="example-form-field">
     <mat-label>Choose a Date</mat-label>
-    <input matInput [matDatepicker]="datepicker" [(ngModel)]="filters.Data">
+    <input matInput [matDatepicker]="datepicker" [(ngModel)]="filters.Data" (keyup)="applyFilter()">
     <mat-hint>MM/DD/YYYY</mat-hint>
     <mat-datepicker-toggle matIconSuffix [for]="datepicker"></mat-datepicker-toggle>
     <mat-datepicker #datepicker>
