More-info dialog implemented

--- a/src/app/dashboard/more-info-dialog/grupa-dialog/grupa-dialog.component.html
+++ b/src/app/dashboard/more-info-dialog/grupa-dialog/grupa-dialog.component.html
@@ -1,4 +1,8 @@
 <div mat-dialog-content>
-    {{data}}
+    <h4>Studenti:</h4>
+
+    @for (student of data[1]; track student) {
+        <h5>Nume: {{student.nume}}, Prenume: {{student.prenume}}, Email: {{student.email}}</h5>
+    }
 </div>
   
