--- a/src/app/dashboard/more-info-dialog/serie-dialog/serie-dialog.component.html
+++ b/src/app/dashboard/more-info-dialog/serie-dialog/serie-dialog.component.html
@@ -1,4 +1,9 @@
 <div mat-dialog-content>
-    {{data}}
+    <h4>An: {{data[0].an}}</h4>
+    <h4>Specializare: {{data[0].specializare}}</h4>
+    <h4>Studenti: </h4>
+    @for (student of data[1]; track student) {
+        <h5>Nume: {{student.nume}}, Prenume: {{student.prenume}}, Email: {{student.email}}</h5>
+    }
 </div>
   
