--- a/src/app/dashboard/more-info-dialog/more-info-dialog.component.html
+++ b/src/app/dashboard/more-info-dialog/more-info-dialog.component.html
@@ -1,10 +1,10 @@
 <h1 mat-dialog-title>More information</h1>
 <div mat-dialog-content *ngIf="isDataLoaded === 7">
-  <h4 (click)="clickDisciplina()">Disciplina: </h4>
-  <h4 (click)="clickProfesori()">Profesor: </h4>
-  <h4 (click)="clickSerie()">Serie: </h4>
-  <h4 (click)="clickGrupa()">Grupa: </h4>
-  <h5>Durata: </h5>
-  <h5>Prag: </h5>
-  <h5>Punctaj: </h5>
+  <h4 (click)="clickDisciplina()">Disciplina: {{info_disciplina.nume}}</h4>
+  <h4 (click)="clickProfesori()">Profesor: {{info_profesor.nume}} {{info_profesor.prenume}}</h4>
+  <h4 (click)="clickSerie()">Serie: {{info_serie.denumireSerie}}</h4>
+  <h4 (click)="clickGrupa()">Grupa: {{info_grupa.denumireGrupa}}</h4>
+  <h5>Durata: {{info_examen.durata}}</h5>
+  <h5>Prag: {{info_examen.prag}}</h5>
+  <h5>Punctaj: {{info_examen.punctaj}}</h5>
 </div>
