--- a/src/app/dashboard/tabel/tabel.component.html
+++ b/src/app/dashboard/tabel/tabel.component.html
@@ -68,25 +68,25 @@
 
     <!-- Position Column -->
     <ng-container matColumnDef="Examen">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Examen </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Exam </th>
         <td mat-cell *matCellDef="let element"> {{element.Examen}} </td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="Sala">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Sala </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Class </th>
         <td mat-cell *matCellDef="let element"> {{element.Sala}} </td>
     </ng-container>
 
     <!-- Weight Column -->
     <ng-container matColumnDef="Data">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Data </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
         <td mat-cell *matCellDef="let element"> {{element.Data}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="Ora">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Ora </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Hour </th>
         <td mat-cell *matCellDef="let element"> {{element.Ora}} </td>
     </ng-container>
 
