--- a/src/app/dashboard/more-info-dialog/grupa-dialog/grupa-dialog.component.html
+++ b/src/app/dashboard/more-info-dialog/grupa-dialog/grupa-dialog.component.html
@@ -1,4 +1,4 @@
-<div mat-dialog-content>
+<div  class="popup" mat-dialog-content>
     <h4>Studenti:</h4>
 
     @for (student of data[1]; track student) {
