--- a/src/app/dashboard/more-info-dialog/serie-dialog/serie-dialog.component.html
+++ b/src/app/dashboard/more-info-dialog/serie-dialog/serie-dialog.component.html
@@ -1,4 +1,4 @@
-<div mat-dialog-content>
+<div class="popup" mat-dialog-content>
     <h4>An: {{data[0].an}}</h4>
     <h4>Specializare: {{data[0].specializare}}</h4>
     <h4>Studenti: </h4>
