--- a/src/app/dashboard/more-info-dialog/grupa-dialog/grupa-dialog.component.css
+++ b/src/app/dashboard/more-info-dialog/grupa-dialog/grupa-dialog.component.css
@@ -3,7 +3,7 @@
     font-weight: 400;
     font-family: Roboto, "Helvetica Neue", sans-serif; 
     text-align: center;
-    background-color: #A188A6;
+    background-color: #273469;
     padding: auto;
 
 }
@@ -12,4 +12,5 @@ h4
 {
     margin-top: 15px;
     font-weight: 400px;
+    color: aliceblue;
 }
