--- a/src/app/dashboard/more-info-dialog/more-info-dialog.component.css
+++ b/src/app/dashboard/more-info-dialog/more-info-dialog.component.css
@@ -4,6 +4,7 @@ h1
     margin-top: 20px;
     margin-bottom: 20px;
     font-family: Roboto, "Helvetica Neue", sans-serif; 
+    color: aliceblue;
 }
 
 h4
@@ -11,11 +12,12 @@ h4
     font-weight: 400;
     font-family: Roboto, "Helvetica Neue", sans-serif; 
     margin-left: 10px;
+    color: aliceblue;
 }
 
 .popup
 {
-    background-color: #A188A6;
+    background-color: #273469;
     height: 350px;
     width: 400px;
     padding: auto;
