--- a/src/app/dashboard/tabel/tabel.component.html
+++ b/src/app/dashboard/tabel/tabel.component.html
@@ -40,11 +40,11 @@
 
 <!-- Butoanele care vor aparea cand intram pe meniul de edit -->
 <button class="buton_edit1" *ngIf="currentMenu === 'edit-menu'" mat-raised-button (click)="openAddDialog()"  matTooltip="Insert">
-    <mat-icon>plus_one</mat-icon>
+    <div class="icon"><mat-icon>plus_one</mat-icon></div>
 </button>
 
 <button class="buton_edit2" *ngIf="currentMenu === 'edit-menu'" mat-raised-button (click)="openDelSelDialog()" matTooltip="Delete selected">
-    <mat-icon>delete</mat-icon>
+    <div class="icon"><mat-icon>delete</mat-icon></div>
 </button>
 <!-- Butoanele care vor aparea cand intram pe meniul de edit -->
   
