--- a/src/app/dashboard/more-info-dialog/more-info-dialog.component.css
+++ b/src/app/dashboard/more-info-dialog/more-info-dialog.component.css
@@ -18,7 +18,7 @@ h4
 .popup
 {
     background-color: #273469;
-    height: 350px;
-    width: 400px;
+    /* height: 500px; */
+    /* width: 800px; */
     padding: auto;
 }
